# yield-showcase-app

./: .gitignore  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  index.html  install.sh  package-lock.json  package.json  test-app.js  vite.config.js
.github/workflows/: build-android.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
