[package]
name = "yield-showcase-app"
version = "1.0.0"
description = "A Tauri app for showcasing daily investment yield"
authors = ["5918vo"]
license = "MIT"
repository = "https://github.com/5918vo/yield-showcase-app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all", "notification-all", "global-shortcut-all"] }
open = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "yield-showcase-app"
path = "src/main.rs"